--- a/firebase.json
+++ b/firebase.json
@@ -24,7 +24,7 @@
     }
   ],
   "hosting": {
-    "public": "frontend/dist",
+    "public": "./frontend/dist",
     "ignore": [
       "firebase.json",
       "**/.*",
